# tooling-releases-client

./: .asf.yaml  .gitignore  .pre-commit-config.yaml  COMMANDS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: allowlistchecker.yml  analyze.yml  build_wheels.yml
docs/: release-workflow.md  transcription-test-format.md
src/atrclient/: __init__.py  api.py  basic.py  client.py  config.py  results.py  show.py  sign.py  web.py
src/atrclient/models/: __init__.py  api.py  args.py  attestable.py  cap.py  checkdata.py  cle.py  distribution.py  github.py  mail.py  results.py  safe.py  schema.py  session.py  sql.py  tabulate.py  unsafe.py  validation.py
tests/: cli_config.t  cli_keys.t  cli_slow_task.t  cli_ssh.t  cli_version.t  cli_workflow.t  conftest.py  test_all.py
tests/files/: ATR_Test_0x1913BD07F118B758_public.asc  apache-test-0.2.tar.gz.asc  apache-test-0.2.tar.gz.sha512
